add scripted; test id hook